--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.bluetooth_connection">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
-
+    <uses-permission android:name= "android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
     <application
